--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -1,5 +1,5 @@
 <nav>
-    <div id="logo">MT</div>
+    <div id="logo"><a href="">🤪</a></div>
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/gallery">Gallery</a>
