styles and animations

--- a/public/html/header.html
+++ b/public/html/header.html
@@ -9,9 +9,23 @@
             const DUPE_AMOUNT = 8;
 
             for (let index = 0; index < DUPE_AMOUNT; index++) {
-                document.write('<h1 class="splash-title" data-content="' + title + '" style="z-index: ' + -index
-                    + '; opacity: ' + (0 + ((index + 1) / DUPE_AMOUNT)) + ';">' + title + '</h1>');
+                const titleElement = document.createElement('h1');
+
+                // Set content and attributes of the element
+                titleElement.textContent = title;
+                titleElement.setAttribute('class', 'splash-title');
+                titleElement.setAttribute('data-content', title)
+                titleElement.style.zIndex = -index;
+                titleElement.style.opacity = (index + 1) / DUPE_AMOUNT;
+                if (index + 1 != DUPE_AMOUNT) {
+                    //don't apply to last title (this is gonna be the main one)
+                    titleElement.style.marginTop = ((DUPE_AMOUNT - index - 1) * -2) + 'vw';
+                }
+
+                // Write element to document
+                document.write(titleElement.outerHTML);
             }
+
 
             // //dupe titles scroll
             // var titles = document.querySelectorAll('.splash-title');
@@ -40,36 +54,59 @@
         <h2>Find recipes based on items you already have in your cupboards.</h2>
 
         <form class="search-form">
-            <input id="splash-search" name="splash-search" type="text" placeholder="Search..." autofocus>
+            <input id="splash-search" name="splash-search" type="text" placeholder="Search...">
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
 
         <script>
-            function getWords(inputString) {
-                // Split the input string using non-alphabet characters as separators
-                var words = inputString.split(/[^a-zA-Z]+/);
+            var splashForm = document.querySelector("#splash-search");
+            var splashContent = document.querySelector('.splash-content');
+            var splashTitles = document.querySelectorAll(".splash-title");
 
-                // Remove duplicates, null, and zero-length items
-                var uniqueWords = words.filter(function (item, index, self) {
-                    return item && index === self.indexOf(item);
-                });
+            splashForm.addEventListener("focus", function () {
+                for (let index = 0; index < splashTitles.length; index++) {
+                    splashTitles[index].style.marginTop = "0";
+                }
 
-                return uniqueWords;
-            }
+                splashContent.style.transform = 'translateY(' + (splashTitles.length - 1) * -2 + 'vw)';
+            });
 
-            function handleFormSubmit() {
-                // Get the input value from the form
-                var inputString = document.getElementById("inputString").value;
+            splashForm.addEventListener("blur", function () {
+                for (let index = 0; index < splashTitles.length; index++) {
+                    splashTitles[index].style.marginTop = ((splashTitles.length - index - 1) * -2) + 'vw';
+                }
 
-                // Call the getWords function to process the input and get the array of unique words
-                var uniqueWords = getWords(inputString);
+                splashContent.style.transform = 'translateY(' + 0 + 'vh)';
+            });
 
-                // Output the result
-                console.log(uniqueWords); // You can change this to do whatever you want with the array
 
-                // Prevent form submission
-                return false;
-            }
+
+
+            // function getWords(inputString) {
+            //     // Split the input string using non-alphabet characters as separators
+            //     var words = inputString.split(/[^a-zA-Z]+/);
+
+            //     // Remove duplicates, null, and zero-length items
+            //     var uniqueWords = words.filter(function (item, index, self) {
+            //         return item && index === self.indexOf(item);
+            //     });
+
+            //     return uniqueWords;
+            // }
+
+            // function handleFormSubmit() {
+            //     // Get the input value from the form
+            //     var inputString = document.getElementById("inputString").value;
+
+            //     // Call the getWords function to process the input and get the array of unique words
+            //     var uniqueWords = getWords(inputString);
+
+            //     // Output the result
+            //     console.log(uniqueWords); // You can change this to do whatever you want with the array
+
+            //     // Prevent form submission
+            //     return false;
+            // }
         </script>
     </div>
 
@@ -133,14 +170,25 @@
             var scrolled = window.pageYOffset;
             parallax.style.transform = 'translateY(' + (scrolled * 0.8) + 'px)';
 
-            // splash featured fadeout
-            // -webkit-mask-image: linear-gradient(to bottom, black 15%, transparent 45%);
-            // mask-image: linear-gradient(to bottom, black 15%, transparent 45%);
-            var featured = document.querySelector('.splash-featured');
-            let maskImageProperty = 'linear-gradient(to top, black '
-                + (100 - scrolled * 0.3) + '%, transparent ' + (120 - scrolled * 0.3) + '%)';
-            featured.style.webkitMaskImage = maskImageProperty;
-            featured.style.maskImage = maskImageProperty;
+            // // splash featured fadeout
+            // var featured = document.querySelector('.splash-featured');
+            // let maskImageProperty = 'linear-gradient(to top, black '
+            //     + (100 - scrolled * 0.3) + '%, transparent ' + (120 - scrolled * 0.3) + '%)';
+            // featured.style.webkitMaskImage = maskImageProperty;
+            // featured.style.maskImage = maskImageProperty;
+
+            // // featured slide out
+            // var featured = document.querySelector('.splash-featured');
+            // var scrollPosition = window.scrollY;
+
+            // featured.style.transform = 'translateY(-' + (scrolled * 0.2) + 'px)';
+
+            // if (scrollPosition > 400) {
+            //     featured.style.animationPlayState = 'running';
+            //     featured.style.animationDirection = 'normal';
+            // } else {
+            //     featured.style.animationDirection = 'reverse';
+            // }
         });
     </script>
 </header>
