--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -1,7 +1,9 @@
 <nav>
-    <div id="logo"><a href="">🤪</a></div>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/gallery">Gallery</a>
-    <a href="/contact">Contact</a>
+    <div class="nav-container">
+        <a href="" class="logo">🤪</a>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/gallery">Gallery</a>
+        <a href="/contact">Contact</a>
+    </div>
 </nav>
