--- a/public/html/header.html
+++ b/public/html/header.html
@@ -53,8 +53,8 @@
 
         <h2>Find recipes based on items you already have in your cupboards.</h2>
 
-        <form id="splash-form" class="search-form">
-            <input id="splash-search" name="splash-search" type="text" placeholder="Search...">
+        <form id="splash-form" class="search-form" method="GET" action="/recipe">
+            <input id="splash-search" name="id" type="text" placeholder="Search...">
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
 
@@ -112,15 +112,60 @@
             splashForm.addEventListener("submit", function (event) {
                 event.preventDefault();
 
-                console.log();
                 const formData = new FormData(this);
-                const url = "/recipe/" + new URLSearchParams(formData).toString();
 
-                fetch(url)
-                    .then(response => response.text())
-                    .then(result => console.log(result))
-                    .catch(error => console.error(error));
+                var xhttp = new XMLHttpRequest();
+                xhttp.onreadystatechange = function () {
+                    if (this.readyState == 4 && this.status == 200) {
+                        putRecipeData(this.responseText);
+                    }
+                };
+                xhttp.open("GET", this.getAttribute("action") + "?" + new URLSearchParams(formData).toString(), true);
+                xhttp.send();
             });
+
+            function putRecipeData(serverResponse) {
+                console.log(serverResponse);
+
+                if (!isJson(serverResponse)) {
+                    console.log("not json")
+                    return false;
+                }
+
+                var jsonTable = JSON.parse(serverResponse)
+                if (!Object.keys(jsonTable).length > 0) {
+                    console.log("empty response")
+                    return false;
+                }
+
+                for (let index = 0; index < jsonTable.length; index++) {
+                    const jsonObj = jsonTable[index];
+
+                    console.log(jsonObj.title)
+                    printToFeatured(jsonObj)
+                }
+
+                return true
+            }
+
+            function printToFeatured(jsonObj) {
+                console.log(jsonObj.title)
+
+                document.querySelector(".featured-title h3").innerHTML = jsonObj.title;
+                document.querySelector(".featured-text p").innerHTML = jsonObj.content;
+
+                document.querySelector(".star-rating").setAttribute("data-content", jsonObj.rating); //TODO: create function to update
+                document.querySelector(".featured-submitter a").innerHTML = "PLACEHOLDER"; //TODO
+            }
+
+            function isJson(jsonString) {
+                try {
+                    const json = JSON.parse(jsonString);
+                    return typeof json === 'object' && json !== null;
+                } catch (error) {
+                    return false;
+                }
+            }
         </script>
     </div>
 
@@ -137,16 +182,13 @@
                     porro pariatur adipisci inventore sunt atque velit labore aliquam voluptatem nisi, enim nesciunt
                     nemo!
                     Aliquid, ea numquam!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur qui ipsum tenetur aut fuga nostrum
-                    impedit, voluptas cum veritatis itaque ab nihil non nemo quam delectus necessitatibus, beatae
-                    eligendi fugit.</p>
 
                 <a href="">Read more...</a>
             </div>
             <div class="featured-side">
                 <img src="../img/featured_sample_tonkatsu.jpg" alt="">
                 <div class="featured-stars">
-                    <p class="star-rating">★★★★★</p>
+                    <p class="star-rating" data-content="2.5">★★★★★</p>
                     <!-- <p>★</p>
                     <p>★</p>
                     <p>★</p>
@@ -155,8 +197,10 @@
 
                     <script>
                         const MAX_RATING = 5;
-                        var rating = 3.29;
+
                         var stars = document.querySelector('.star-rating');
+                        var rating = parseFloat(stars.getAttribute('data-content'));
+
                         stars.style.backgroundImage = 'linear-gradient(90deg, var(--second-color) '
                             + rating / MAX_RATING * 100 + '%, var(--first-background-light) 0%)';
                     </script>
