--- a/public/html/header.html
+++ b/public/html/header.html
@@ -35,7 +35,13 @@
             <div class="featured-side">
                 <img src="../img/featured_sample_tonkatsu.jpg" alt="">
                 <div class="featured-stars">
-                    <p class="star-rating" data-content="2.5">★★★★★</p>
+                    <p class="star-rating" data-content="2.5">
+                        <span>★</span>
+                        <span>★</span>
+                        <span>★</span>
+                        <span>★</span>
+                        <span>★</span>
+                    </p>
                     <p class="featured-ratings">423 ratings</p>
                 </div>
 
