continuing with transition animations

--- a/public/html/header.html
+++ b/public/html/header.html
@@ -5,8 +5,8 @@
 
     <div class="splash-content">
         <div class="splash-title-container">
-            
-        </div>      
+
+        </div>
 
         <h2>Find recipes based on items you already have in your cupboards.</h2>
 
@@ -33,7 +33,10 @@
                 <a href="">Read more...</a>
             </div>
             <div class="featured-side">
-                <img src="../img/featured_sample_tonkatsu.jpg" alt="">
+                <div class="featured-img">
+                    <img src="../img/featured_sample_tonkatsu.jpg" alt="">
+                    <div class="img-overlay"></div>
+                </div>
                 <div class="featured-stars">
                     <p class="star-rating" data-content="2.5">
                         <span>★</span>
