add containers to both sides + swiping

--- a/public/html/header.html
+++ b/public/html/header.html
@@ -3,62 +3,69 @@
         <div class="splash-background"></div>
     </div>
 
-    <div class="splash-content">
-        <div class="splash-title-container">
+    <div class="splash-content-container">
 
+        <div class="splash-content">
+            <div class="splash-title-container">
+
+            </div>
+
+            <h2>Find recipes based on items you already have in your cupboards.</h2>
+
+            <form id="splash-form" class="search-form" method="GET" action="/recipe">
+                <input id="splash-search" name="id" type="text" placeholder="Search...">
+                <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
         </div>
 
-        <h2>Find recipes based on items you already have in your cupboards.</h2>
-
-        <form id="splash-form" class="search-form" method="GET" action="/recipe">
-            <input id="splash-search" name="id" type="text" placeholder="Search...">
-            <button type="submit"><i class="fa fa-search"></i></button>
-        </form>
     </div>
 
-    <div class="splash-featured">
+    <div class="splash-featured-container">
 
-        <div class="featured-title">
-            <h3>Food Title</h3>
-        </div>
-
-        <div class="featured-content">
-            <div class="featured-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quae architecto consectetur
-                    eaque
-                    porro pariatur adipisci inventore sunt atque velit labore aliquam voluptatem nisi, enim nesciunt
-                    nemo!
-                    Aliquid, ea numquam!</p>
-
-                <a href="">Read more...</a>
+        <div class="splash-featured">
+            <div class="featured-title">
+                <h3>Food Title</h3>
             </div>
-            <div class="featured-side">
-                <div class="featured-img">
-                    <img src="../img/featured_sample_tonkatsu.jpg" alt="">
-                    <div class="img-overlay"></div>
-                </div>
-                <div class="featured-stars">
-                    <p class="star-rating" data-content="2.5">
-                        <span>★</span>
-                        <span>★</span>
-                        <span>★</span>
-                        <span>★</span>
-                        <span>★</span>
-                    </p>
-                    <p class="featured-ratings">423 ratings</p>
-                </div>
 
-                <div class="featured-submitter">Submitted by <a href="">SoAndSo57</a></div>
+            <div class="featured-content">
+                <div class="featured-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quae architecto
+                        consectetur
+                        eaque
+                        porro pariatur adipisci inventore sunt atque velit labore aliquam voluptatem nisi, enim nesciunt
+                        nemo!
+                        Aliquid, ea numquam!</p>
+
+                    <a href="">Read more...</a>
+                </div>
+                <div class="featured-side">
+                    <div class="featured-img">
+                        <img src="../img/featured_sample_tonkatsu.jpg" alt="">
+                        <div class="img-overlay"></div>
+                    </div>
+                    <div class="featured-stars">
+                        <p class="star-rating" data-content="2.5">
+                            <span>★</span>
+                            <span>★</span>
+                            <span>★</span>
+                            <span>★</span>
+                            <span>★</span>
+                        </p>
+                        <p class="featured-ratings">423 ratings</p>
+                    </div>
+
+                    <div class="featured-submitter">Submitted by <a href="">SoAndSo57</a></div>
+                </div>
             </div>
-        </div>
 
-        <div class="featured-nav">
-            <div class="featured-nav-buttons">
-                <a href="">•</a>
-                <a href="">•</a>
-                <a href="">•</a>
-                <a href="">•</a>
-                <a href="">•</a>
+            <div class="featured-nav">
+                <div class="featured-nav-buttons">
+                    <a href="">•</a>
+                    <a href="">•</a>
+                    <a href="">•</a>
+                    <a href="">•</a>
+                    <a href="">•</a>
+                </div>
             </div>
         </div>
 
