--- a/public/html/header.html
+++ b/public/html/header.html
@@ -24,17 +24,12 @@
 
         <div class="splash-featured">
             <div class="featured-title">
-                <h3>Food Title</h3>
+                <h3> </h3>
             </div>
 
             <div class="featured-content">
                 <div class="featured-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quae architecto
-                        consectetur
-                        eaque
-                        porro pariatur adipisci inventore sunt atque velit labore aliquam voluptatem nisi, enim nesciunt
-                        nemo!
-                        Aliquid, ea numquam!</p>
+                    <p> </p>
 
                     <a href="">Read more...</a>
                 </div>
@@ -54,7 +49,7 @@
                         <p class="featured-ratings">423 ratings</p>
                     </div>
 
-                    <div class="featured-submitter">Submitted by <a href="">SoAndSo57</a></div>
+                    <div class="featured-submitter">Submitted by <a href=""> </a></div>
                 </div>
             </div>
 
