featured nav desktop

--- a/public/html/header.html
+++ b/public/html/header.html
@@ -55,7 +55,7 @@
 
             <div class="featured-nav">
                 <div class="featured-nav-buttons">
-                    <a href="">•</a>
+                    <span>•</span>
                 </div>
             </div>
         </div>
