more mobile debugging

--- a/public/html/footer.html
+++ b/public/html/footer.html
@@ -1,6 +1,10 @@
 <footer>
-    <p>Author: Helsin Busin Hege</p>
-    <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+    <h3>ABOUT RECIPAIR</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet, dignissimos itaque quia alias ad hic iure ipsa
+        exercitationem adipisci quae repellendus, sapiente qui! Vero unde illo nesciunt expedita? Necessitatibus, aut.
+    </p>
+    <p>– Miika Tiihonen</p>
+    <p><a href="mailto:hege@example.com">pikkmai@example.com</a></p>
 </footer>
 
 </body>
