footer scroll on desktop

--- a/public/html/footer.html
+++ b/public/html/footer.html
@@ -1,10 +1,16 @@
 <footer>
-    <h3>ABOUT RECIPAIR</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet, dignissimos itaque quia alias ad hic iure ipsa
-        exercitationem adipisci quae repellendus, sapiente qui! Vero unde illo nesciunt expedita? Necessitatibus, aut.
-    </p>
-    <p>– Miika Tiihonen</p>
-    <p><a href="mailto:hege@example.com">pikkmai@example.com</a></p>
+    <div class="footer-container">
+        <div class="footer-content">
+            <h3>ABOUT RECIPAIR</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet, dignissimos itaque quia alias ad hic iure
+            ipsa
+            exercitationem adipisci quae repellendus, sapiente qui! Vero unde illo nesciunt expedita? Necessitatibus,
+            aut.
+        </p>
+        <p>– Miika Tiihonen</p>
+        <p><a href="mailto:hege@example.com">pikkmai@example.com</a></p>
+        </div>
+    </div>
 </footer>
 
 </body>
