--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -1,9 +1,17 @@
 <nav>
     <div class="nav-container">
-        <a href="" class="logo">🤪</a>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/gallery">Gallery</a>
-        <a href="/contact">Contact</a>
+        <!-- 🤪 -->
+        <div class="nav-opener">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
     </div>
 </nav>
