--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -8,7 +8,7 @@
         </div>
 
         <ul>
-            <li><a href="/">Home</a></li>
+            <li class="current-page-nav"><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/contact">Contact</a></li>
